--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hollywood Stars Live</title>
     <script>
         window.onload = function() {
-            window.location.href = "https://hollywoodstars.live/pamela-anderson-some-stories/";
+            window.location.href = "https://pamela-anderson-story.vercel.app/";
         };
     </script>
 </head>
